// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button Component Button Disabled Snapshot Test 1`] = `
<div>
  <button
    class="flex flex-row items-center px-4 py-2 bg-black text-white rounded-md hover:scale-105 duration-300  bg-gray-400"
    disabled=""
  >
    This is my first test
  </button>
</div>
`;

exports[`Test Button Component Button Loading Snapshot Test 1`] = `
<div>
  <button
    class="flex flex-row items-center px-4 py-2 bg-black text-white rounded-md hover:scale-105 duration-300  "
    disabled=""
  >
    <svg
      class="animate-spin h-5 w-5 mr-3 text-white"
      fill="none"
      viewBox="0 0 24 24"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    This is my first test
  </button>
</div>
`;

exports[`Test Button Component Button Snapshot Test 1`] = `
<div>
  <button
    class="flex flex-row items-center px-4 py-2 bg-black text-white rounded-md hover:scale-105 duration-300  "
  >
    This is my first test
  </button>
</div>
`;
